Added some style fixes.

--- a/packages/app/src/assets/tailwind.scss
+++ b/packages/app/src/assets/tailwind.scss
@@ -6,6 +6,7 @@
   --color-blue: #0071e3;
   --color-blue-lightest: #f5f5f7;
   --color-gray: #6e6e73;
+  --color-gray-2: #888;
   --color-error-red: #ff4f00;
 }
 
