chore: major color replacements

--- a/packages/app/src/assets/tailwind.scss
+++ b/packages/app/src/assets/tailwind.scss
@@ -70,7 +70,7 @@
   }
 
   a {
-    @apply hover:underline focus-visible:underline rounded underline-offset-4;
+    @apply underline focus-visible:underline rounded underline-offset-4;
 
   }
 }
