style: fix fonts

--- a/packages/app/src/assets/tailwind.scss
+++ b/packages/app/src/assets/tailwind.scss
@@ -24,18 +24,20 @@
 
 @font-face {
   font-family: "Whyte";
-  font-style: normal;
-  font-weight: 100, 400, 500, 600, 700;
+  font-weight: 100 900;
   font-display: swap;
+  font-style: normal;
   src: url("https://d2ysxj5jxlkqx4.cloudfront.net/fonts/ABCWhyteVariable.woff2") format("woff2"),
     url("https://d2ysxj5jxlkqx4.cloudfront.net/fonts/ABCWhyteVariable.woff") format("woff");
 }
 
 @font-face {
   font-family: "Millik";
-  font-style: bold;
+  font-style: 700;
   font-display: swap;
-  src: url("https://d2ysxj5jxlkqx4.cloudfront.net/fonts/Millik.woff2") format("woff2");
+  font-style: normal;
+  src: url("https://d2ysxj5jxlkqx4.cloudfront.net/fonts/Millik.woff2") format("woff2"),
+    url("https://d2ysxj5jxlkqx4.cloudfront.net/fonts/Millik.woff") format("woff");
 }
 
 @layer base {
