--- a/packages/app/src/assets/tailwind.scss
+++ b/packages/app/src/assets/tailwind.scss
@@ -50,17 +50,17 @@
   }
 
   h1 {
-    @apply text-4xl font-bold text-night-100;
+    @apply text-4xl font-semibold text-cream;
   }
   h2 {
-    @apply text-3xl font-bold text-night-100;
+    @apply text-3xl font-semibold text-silver-200;
   }
   h3 {
-    @apply text-2xl font-bold text-night-100;
+    @apply text-2xl font-semibold text-silver-200;
   }
 
   body {
-    @apply min-h-screen font-sans text-base text-night-100 bg-night-1200;
+    @apply min-h-screen font-sans text-base text-silver-200 bg-night-1000;
   }
 
   #app {
